--- a/src/views/forgot-password.ejs
+++ b/src/views/forgot-password.ejs
@@ -2,15 +2,87 @@
 <html>
   <head>
     <title>Forgot password</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href='.views.css' type="text/css" />
   </head>
   <body>
-    <h1>Forgot password</h1>
-    <form action='' method='POST'>
+    <style>
+      body{
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+      }
+      .container{
+        position: absolute;
+        background-color: #112B3C;
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        margin: 20px 0px;
+        padding: 20px 0px;
+        border-radius: 20px ;
+      }
+      h1{
+        color: #F66B0E;
+      }
+      form{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+      }
+      .input_email{
+        display: flex;
+        position: relative;
+        align-items: center;
+        justify-content: space-between;
+        width: 250px;
+        height: 25px;
+        background: #EFEFEF;
+        border-radius: 40px;
+        border: solid #F66B0E;
+        padding: 0px 15px;
+        margin-right: 9px;
+        outline: none;
+      }
+      .input_email:hover{
+        box-shadow: 0 0 0 3px #F66B0E;
+      }
+      label{
+        color: #F66B0E;
+        font-size: large;
+      }
+      .mybtn{
+        align-self: center;
+        border: none;
+        border-radius: 0.5rem;
+        background: #F66B0E;
+        font-size: large;
+        font-weight: 700;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        padding: 0.5rem;
+        transition: 0.5s;
+      }
+      .mybtn:hover{
+          box-shadow: 0.2rem 0.2rem 0.5rem #F66B0E;
+      }
+    </style>
+    <div class='container'>
+      <h1>Forgot password</h1>
+      <form action='' method='POST'>
         <label for='email'>Email:</label>
-        <input type='email' name='email' id='email'/>
+        <input class='input_email' type='email' name='email' id='email'/>
         <br/>
-        <input type='submit' value='Send' />
-    </form>
+        <input class="mybtn" type='submit' value='Send' />
+      </form>
+    </div>
   </body>
 </html>
