Recuperacion de contraseña

--- a/src/views/updatePassword.ejs
+++ b/src/views/updatePassword.ejs
@@ -5,5 +5,6 @@
 </head>
 <body>
     <h1>Su contraseña ya ha sido actualizada...</h1>
+    <h3><a href="http://localhost:3000/login">Volver a Home</a></h3>
 </body>
 </html>
