--- a/src/views/forgot-password.ejs
+++ b/src/views/forgot-password.ejs
@@ -42,7 +42,8 @@
         align-items: center;
         justify-content: space-between;
         width: 250px;
-        height: 25px;
+        height: 150px;
+        font-size: large;
         background: #EFEFEF;
         border-radius: 40px;
         border: solid #F66B0E;
