--- a/src/views/updatePassword.ejs
+++ b/src/views/updatePassword.ejs
@@ -3,8 +3,41 @@
 <head>
 	<title>Update password</title>
 </head>
+    <style>
+        body{
+            width: 100%;
+            height: auto;
+            display: flex;
+            justify-content: center;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+            'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+            sans-serif;
+        }
+        .title1{
+            color: #F66B0E;
+        }
+        .container{
+            position: absolute;
+            background-color: #112B3C;
+            width: 50%;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            margin: 20px 0px;
+            padding: 20px 0px;
+            border-radius: 20px ;
+        }
+        .container a{
+            color: #F66B0E;
+            font-weight: 700;
+            font-size: large;
+        }
+    </style>
 <body>
-    <h1>Su contraseña ya ha sido actualizada...</h1>
-    <h3><a href="http://localhost:3000/login">Volver a Home</a></h3>
+    <div class="container">
+        <h1 class="title1">Su contraseña ya ha sido actualizada...</h1>
+        <h3><a href="http://localhost:3000/login">Volver a Home</a></h3>
+    </div>
 </body>
 </html>
