changed-server-localhost

--- a/src/views/updatePassword.ejs
+++ b/src/views/updatePassword.ejs
@@ -37,7 +37,7 @@
 <body>
     <div class="container">
         <h1 class="title1">Su contraseña ya ha sido actualizada...</h1>
-        <h3><a href="http://localhost:3000/login">Volver a Home</a></h3>
+        <h3><a href="https://pf-eco-frontend-lorelor.vercel.app/login">Volver a Home</a></h3>
     </div>
 </body>
 </html>
